--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,13 @@
     "type":    "library",
     "license": "MIT",
     "require": {
-        "php":               ">=5.5.9",
-        "arcanedev/support": "~3.0"
+        "php":                 ">=5.5.9",
+        "arcanedev/support":   "~3.0",
+        "illuminate/database": "~5.0"
     },
     "require-dev": {
-        "phpunit/phpcov":    "~2.0|~3.0",
-        "phpunit/phpunit":   "~4.0|~5.0"
+        "phpunit/phpcov":      "~2.0|~3.0",
+        "phpunit/phpunit":     "~4.0|~5.0"
     },
     "autoload": {
         "psr-4": {
