--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,14 @@
     "type":    "library",
     "license": "MIT",
     "require": {
-        "php":                 ">=5.5.9",
+        "php":                 ">=5.6.4",
         "arcanedev/support":   "~3.0",
         "illuminate/database": "~5.0"
     },
     "require-dev": {
-        "phpunit/phpcov":      "~2.0|~3.0",
-        "phpunit/phpunit":     "~4.0|~5.0"
+        "phpunit/phpcov":  "~3.0",
+        "phpunit/phpunit": "~5.0",
+        "orchestra/testbench": "~3.2.0"
     },
     "autoload": {
         "psr-4": {
