--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,13 @@
     "license": "MIT",
     "require": {
         "php":                 ">=5.6.4",
-        "arcanedev/support":   "~3.0",
+        "arcanedev/support":   "~4.0",
         "illuminate/database": "~5.0"
     },
     "require-dev": {
         "phpunit/phpcov":  "~3.0",
-        "phpunit/phpunit": "~5.0"
+        "phpunit/phpunit": "~5.0",
+        "orchestra/testbench": "~3.0"
     },
     "autoload": {
         "psr-4": {
